# Synka

./: README.md
SynkaLens-main/: README.md  pyproject.toml  run_dashboard.sh  run_pipeline.py
SynkaLens-main/app/: dashboard.py  data_access.py
SynkaLens-main/docs/: Architecture.md  Instrucoes.md  Roadmap.md  Trade offs.md  contexto (V1.0).md
SynkaLens-main/src/synka_lens/: config.py
SynkaLens-main/src/synka_lens/domain/: machine_state.py
SynkaLens-main/src/synka_lens/ingestion/: timescale_source.py
SynkaLens-main/src/synka_lens/transformation/: bronze.py  gold.py  silver.py
SynkaLens-main/tests/: test_bronze.py  test_data_access.py  test_edge_cases.py  test_end_to_end.py  test_gold.py  test_machine_state.py  test_multiple_machines.py  test_silver.py
