[project]
name = "synkalens"
version = "0.1.0"
description = "Camada analítica do ecossistema Synka"
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "duckdb>=1.1.0",
    "pyarrow>=18.0.0",
    "tzdata>=2026.2",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synka_lens"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
